[refactor] delete IndexController